Triangles: variant, bugfix, vehicle properties panel (#72)
* VehicleIcon component takes size, orientation, label, variant

draws variants in the triangle where they exist
fixes triangle getting clipped in the incoming box

* draw triangle with variant in the VehiclePropertiesPanel

--- a/assets/css/_incoming_box.scss
+++ b/assets/css/_incoming_box.scss
@@ -23,11 +23,6 @@
   }
 }
 
-.m-incoming-box__vehicle-icon {
-  margin-right: 0.5rem;
-}
-
-.m-incoming-box__vehicle-icon-svg {
-  height: 14px;
-  width: 18px;
+.m-incoming-box__vehicle-label {
+  margin-left: 0.5rem;
 }
