--- a/assets/css/_ladder.scss
+++ b/assets/css/_ladder.scss
@@ -26,7 +26,7 @@
       stroke: $color-secondary-light;
     }
 
-    .m-ladder__vehicle-label-background {
+    .m-vehicle-icon__label-background {
       fill: $color-secondary-light;
     }
   }
@@ -36,7 +36,7 @@
       stroke: $color-secondary-medium;
     }
 
-    .m-ladder__vehicle-label-background {
+    .m-vehicle-icon__label-background {
       fill: $color-secondary-medium;
     }
   }
